# CLASP

./: .dockerignore  .gitignore  Dockerfile  README.md  RELATORIO_SVQ_MSEB.md  docker-compose.yml  pyproject.toml  results_CLASP2.csv  results_noise_model.csv  results_noise_robustness.csv  stopped_epoch.txt
data/datasets/speechbrown_raw/: .gitattributes  README.md
docker/: Dockerfile  Dockerfile.amd64  Dockerfile.arm64  README.md
docs/: EVAL.md  MSEB.md  ROADMAP.md  TRAINING.md  noise_robustness.md
experiments/: eval_queue.txt  eval_spiral.sh  eval_spoken_squad.sh  eval_spoken_squad_parallel.sh  eval_voxpopuli.sh  parallel_eval.sh  run_emotions_all_voices.sh  run_noise_ambient.sh  run_seedvc_all_voices.sh  run_spiral.sh  run_spoken_squad.sh  run_svq_mseb.sh  run_svq_rag.sh  run_svq_retrieval.sh  run_voxpopuli.sh
models/checkpoints/: noise_robustness_vox.csv
notebooks/: spoken_squad_exploration.ipynb
results/2026-05-20/: CLASP1.csv  CLASP2.csv  CLASP_Concat_Final.csv  CLASP_noise.csv  CLASP_noise_augmented.csv
scripts/: SPIRAL_EVAL_README.md  augment_wavs.py  build_minimal_dataset_pkl.py  build_speechbrown_pkl.py  build_spoken_squad_pkl.py  build_svq_pkl.py  build_voxpopuli_pkl.py  download_esc50.sh  eval_spiral_retrieval.py  eval_spiral_retrieval_demo.py  run_all_evals.sh  run_inference.py  run_mseb_task.py  run_noise_robustness_eval.py  run_retrieval_eval.py  run_spiral_retrieval.sh  run_svq_rag_eval.py  run_training.sh  scan_speechbrown_audio.py  train.py
src/clasp/: __init__.py
src/clasp/audio/: __init__.py  noise_augmentation.py
src/clasp/config/: __init__.py  settings.py
src/clasp/data/: __init__.py  datasets.py  speechbrown_paths.py  spoken_squad_wavs.py  testes.md
src/clasp/evaluation/: __init__.py  metrics.py  qa_metrics.py  ranking_metrics.py  retrieval_plots.py  spiral_max_sim.py  spiral_runner.py
src/clasp/inference/: __init__.py  audio_preprocess.py  embed_audio.py  pipeline.py  spectrogram_image.py
src/clasp/models/: __init__.py  fusion.py
src/clasp/mseb_adapter/: __init__.py  clasp_encoder.py
src/clasp/rag/: __init__.py  generator.py  svq_rag.py
src/clasp/retrieval/: __init__.py  search.py
src/clasp/train/: __init__.py  trainer.py
